data plus country borders

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 <title>Find a Fire</title>
 
 </head>
-  <body>
-    <h2>MODIS Data</h2>
-    <div class="container">
-      <div id="map"></div>
-        <div id="datepicker"></div>
-    </div>
-      <div id="slider"></div>
-  </body>
+    <body>
+        <div class="wrapper">
+          <h2>MODIS Data</h2>
+            <div class="container-map">
+                <div id="map"></div>
+                <div id="datepicker"></div>
+            </div>
+            <div id="slider"></div>
+        </div>
+    </body>
 <script type="text/javascript" src="script.js"></script>
 </html>
